--- a/k8s/Deployment.yml
+++ b/k8s/Deployment.yml
@@ -1,23 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: gohttp-deployment
+  namespace: default
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: myapp
+      app: gohttp
   template:
     metadata:
       labels:
-        app: myapp
+        app: gohttp
     spec:
       containers:
-      - name: myapp
-        image: geraldocoosta/go-apresentacao
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
-        ports:
-        - containerPort: 8085
+        - name: go-http
+          image: geraldocoosta/go-apresentacao:57
+          imagePullPolicy: IfNotPresent
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
+          resources:
+            limits:
+              cpu: "100m"
+              memory: "100Mi"
+            requests:
+              cpu: "100m"
+              memory: "100Mi"
+
