--- a/k8s/Service.yml
+++ b/k8s/Service.yml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp
+  name: gohttp-service
+  namespace: default
 spec:
   selector:
-    app: myapp
+    app: gohttp
   ports:
   - port: 80
     targetPort: 8080
